logs/vmakedk.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/vmakedk'...
Compiling './lib/python3.5/site-packages/vmakedk/__init__.py'...
***   File "./lib/python3.5/site-packages/vmakedk/__init__.py", line 91
    print volume_set.fstab()
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vmakedk/loopback.py'...
***   File "./lib/python3.5/site-packages/vmakedk/loopback.py", line 32
    print 'running: ', ' '.join(['losetup'] + params)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/vmakedk/runner.py'...
***   File "./lib/python3.5/site-packages/vmakedk/runner.py", line 29
    print 'exec: mkdir -p', path
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/vmakedk/test'...
Compiling './lib/python3.5/site-packages/vmakedk/volume.py'...
***   File "./lib/python3.5/site-packages/vmakedk/volume.py", line 35
    print 'existing volume found on', vol.loop, ', ', 'mounted' if vol.up else 'not mounted'
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/vmakedk-0.2.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
